2009-06-28  Vadim Kurland  <vadim@vk.crocodile.org>

        * Compiler_cluster.cpp (Compiler::processFailoverGroup): fixes
        #166: cluster should be allowed to have interfaces with the same
        name as interfaces of the member firewall (i.e. "eth0"). This is
        necessary to support failover protocols that do not create virtual
        interfaces, but rather operate over normal interfaces, such as
        heartbeat.

2009-06-23  vadim  <vadim@vk.crocodile.org>

	* InetAddr.cpp (InetAddr::init_from_string): Fixes #112: use strtol
	instead of atoi so we can determine when the string could not be
	converted entirely.

2009-06-18  vadim  <vadim@vk.crocodile.org>

	* Interface.cpp (Interface::isBridgePort): Refs #90 :
	deprecated attribute "bridgeport" in Interface object, using
	type set in the InterfaceOptions object.

	* Firewall.cpp (Firewall::duplicateInterfaces): Fixes #142 : Copy
	interfaces of the firewall before policies in
	Firewall::duplicate() because interfaces might be referenced in
	rules and should be coped before rule elements for the latter
	to set up references to the copies.

2009-06-14  vadim  <vadim@vk.crocodile.org>

	* Interface.h (libfwbuilder): Ticket #55: deprecated isExt()
	and setExt() methods. Platforms that care about interface being
	external should use security levels. Currently this is only PIX
	and it uses sec. levels already.

2009-06-09  vadim  <vadim@vk.crocodile.org>

	* NATCompiler.cpp (classifyNATRule::processNext): fixed bug
	#2803689 "NAT rule matching dport but chaning sport is broken".
	NAT rules that match destination port but translate source port
	should be possible (and the opposite too).

2009-06-08  vadim  <vadim@vk.crocodile.org>

	* Rule.cpp (PolicyRule::getDirectionAsString): should return
	string "Undefined" for the direction equal to PolicyRule::Undefined

	* NATCompiler.cpp (classifyNATRule::processNext): support for
	SDNAT rules that translate both addresses and ports.
